# DuoJRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Shader/: BackpackFragment.glsl  BackpackVertex.glsl  ScreenFragment.glsl  ScreenVertex.glsl  SkyboxFragment.glsl  SkyboxVertex.glsl
Source/: CMakeLists.txt  Context.cpp  Context.h  Core.h  Main.cpp
Source/Camera/: Camera.cpp  Camera.h
Source/Core/Debug/: Log.h
Source/Core/Window/: Window.h  WindowsWindow.cpp  WindowsWindow.h
Source/Debug/: Log.h
Source/Geometry/: EulerAngle.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Transform.h  Vertex.h
Source/Input/: Input.cpp  Input.h
Source/Loop/: DeltaTime.cpp  DeltaTime.h  Loop.cpp  Loop.h
Source/Render/: BuiltinData.h  PostProcessPass.cpp  PostProcessPass.h  Render.cpp  Render.h  RenderContext.cpp  RenderContext.h  Renderer.cpp  Renderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  StaticMeshRenderer.cpp  StaticMeshRenderer.h
Source/Resource/: Resource.cpp  Resource.h
Source/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Source/Shader/: Shader.cpp  Shader.h
Source/Texture/: Texture.cpp  Texture.h  TextureCube.cpp  TextureCube.h
Source/Window/: Window.h  WindowsWindow.cpp  WindowsWindow.h
